--- a/client/app/src/main/res/layout/fragment_new_route_map.xml
+++ b/client/app/src/main/res/layout/fragment_new_route_map.xml
@@ -22,7 +22,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <com.google.android.gms.maps.MapView
-        android:id="@+id/map_view"
+        android:id="@+id/mapView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_anchor="@id/appBarLayout"
