Aggiunta persistenza stato per l'aggiunta delle informazioni e per la mappa

--- a/client/app/src/main/res/layout/fragment_new_route_map.xml
+++ b/client/app/src/main/res/layout/fragment_new_route_map.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.new_route.NewRouteMapFragment">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -25,8 +25,9 @@
         android:id="@+id/mapView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:contentDescription="Mappa"
         app:layout_anchor="@id/appBarLayout"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/nextFab"
@@ -35,8 +36,21 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="12dp"
+        android:contentDescription="Avanti"
         android:enabled="false"
         android:src="@drawable/ic_baseline_arrow_forward_24"
+        app:fabSize="normal" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/deleteFab"
+        style="?attr/floatingActionButtonTertiaryStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_gravity="bottom|start"
+        android:layout_margin="12dp"
+        android:contentDescription="Avanti"
+        android:src="@drawable/ic_outline_delete_24"
         app:fabSize="normal" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
